--- a/g1store/src/layout/Header/style.scss
+++ b/g1store/src/layout/Header/style.scss
@@ -1,7 +1,18 @@
 #logo{
     max-width: 100px;
   }
-
-#navbarScroll{
+  #sessao-produtos #menu-categorias {
+    padding: 50px;
+    
+    text-align: center;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    align-items: baseline;
+    width: 300px;
+    height: 100px;
+    margin-top: 20px;
+    top: 120px;
+    position: sticky;
 }
