--- a/g1store/src/layout/ProdutosGerais/style.scss
+++ b/g1store/src/layout/ProdutosGerais/style.scss
@@ -1,4 +1,9 @@
+section{
+    
 .titulo-cards{
+    
+    margin-top: 120px;
+    margin-right: 180px;
     text-align: right;
 }
 
@@ -36,5 +41,6 @@
         }
         
     }
+}
 }
 
