--- a/g1store/src/layout/SobreNosMain/style.scss
+++ b/g1store/src/layout/SobreNosMain/style.scss
@@ -1,3 +1,16 @@
 #sobrenos{
-    margin-top: 200px;
+    margin-top: 150px;
+
+}
+#sobrenos-ul{
+    display: inline;
+    
+}
+
+#fotos{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 50%;
+    max-width:200px;
+    max-height:150px;
 }
