Ajustes na pagina de produtos gerais

--- a/g1store/src/layout/Carrocel/style.scss
+++ b/g1store/src/layout/Carrocel/style.scss
@@ -1,12 +1,13 @@
 
 #carrocel{
-    height: calc(40vh);
+    height: calc(60vh);
 
     margin-top: 55px;
 }
 
 #destaques-container{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     img{
         max-width: 200px;
