--- a/g1store/src/layout/ProdutosGerais/style.scss
+++ b/g1store/src/layout/ProdutosGerais/style.scss
@@ -2,8 +2,7 @@ section{
     
     .titulo-cards{
         margin-top: 120px;
-        margin-right: 180px;
-        text-align: right;
+        text-align: center;
     }
 
     #sessao-produtos{
