--- a/g1store/src/layout/ProdutosGerais/style.scss
+++ b/g1store/src/layout/ProdutosGerais/style.scss
@@ -39,7 +39,7 @@ section{
                     .card-buttoms{
                         width: 100%;                        
 
-                        .botao-card{                            
+                        #botao-card{                            
                             margin-bottom: 10px;
                         }
                     }
