--- a/g1store/src/layout/ProdutosGerais/style.scss
+++ b/g1store/src/layout/ProdutosGerais/style.scss
@@ -10,6 +10,9 @@ section{
         justify-content: center;
 
         #menu-categorias{
+            position: sticky;
+            top: 0;
+            bottom: 50px;
             display:flex;
             flex-direction: column;
             background-color: white;
