--- a/g1store/src/layout/ProdutoMain/style.scss
+++ b/g1store/src/layout/ProdutoMain/style.scss
@@ -1,18 +1,23 @@
 .corpo-produto{
-    min-height: calc(100vh - 130.5px);
-    padding-top: 200px;
+    min-height: calc(100vh);
+    margin-top: 50px;
     display: flex;
+    justify-content: space-evenly;
     
     .imagem-section{
         .imagem-produto{
-            min-width: 700px;
-            max-width: 700px;
+            width: 60%;
+            width: 500px;
+            height: 500px;
+            object-fit: contain;
             padding: 40px;
         }
     }
-    .imagem-section{
+    .descricao-section{
+        width: 40%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         .div-botoes{
             #botoes-produto{
                 margin: 10px;
