--- a/g1store/src/layout/CarrinhoMain/InformacoesCarrinho/style.scss
+++ b/g1store/src/layout/CarrinhoMain/InformacoesCarrinho/style.scss
@@ -1,11 +1,14 @@
 .informacoes-carrinho{
-    border-style:solid;
-    border-radius: 15px;
-    height: 300px;
+    text-align: center;
+    padding: 10px 40px;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 20px;
+    margin-right: 60px;
+    
 
     
 }
