Ajustes de cores e descrição do sobre nós

--- a/g1store/src/layout/CarrinhoMain/style.scss
+++ b/g1store/src/layout/CarrinhoMain/style.scss
@@ -1,3 +1,12 @@
+.titulo-carrinho{
+    text-align: center;
+    background-color: hsla(211, 100%, 50%, 0.363);
+    border-radius: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color:white;
+}
+
 .corpo-carrinho{
     display: flex;
     justify-content: space-around;
