--- a/g1store/src/layout/Carrocel/GeraCards/style.scss
+++ b/g1store/src/layout/Carrocel/GeraCards/style.scss
@@ -6,3 +6,10 @@
     object-fit: contain;
 }
 
+#titulo-carrocel{
+    background-color: hsla(211, 100%, 50%, 0.363);
+    color: white;
+    font-weight: 500;
+    margin-bottom: 50px;
+    border-radius: 15px;
+}
