--- a/g1store/src/layout/Footer/style.scss
+++ b/g1store/src/layout/Footer/style.scss
@@ -1,6 +1,7 @@
 footer{
     text-align: center;
-    background-color: blue;
+    background-color: hsla(211, 100%, 50%, 0.363);
     padding-bottom: 20px;
     padding-top: 20px;
+    color:white;
 }
