--- a/g1store/src/layout/ProdutosGerais/style.scss
+++ b/g1store/src/layout/ProdutosGerais/style.scss
@@ -1,8 +1,14 @@
 section{
     
     .titulo-cards{
-        margin-top: 120px;
+        margin-top: 10px;
         text-align: center;
+        font-weight: 500;
+        color: white;
+        background-color: hsla(211, 100%, 50%, 0.363);
+        border-radius: 15px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     #sessao-produtos{
