--- a/g1store/src/layout/CarrinhoMain/style.scss
+++ b/g1store/src/layout/CarrinhoMain/style.scss
@@ -33,3 +33,13 @@
     }
 
 }
+
+@media(max-width:540px){
+    .informacoes-carrinho{
+        padding: 0;
+        margin-right: 10px;
+    }
+    .corpo-carrinho{
+        flex-direction: column;
+    }
+ }
